Fixed border issue in header and made search bar visible (only grey if not in focus).

--- a/Picturepark.ContentPortal.Demo/Picturepark.ContentPortal.Demo/ClientApp/src/app/components/items/items.component.scss
+++ b/Picturepark.ContentPortal.Demo/Picturepark.ContentPortal.Demo/ClientApp/src/app/components/items/items.component.scss
@@ -3,11 +3,11 @@
   top: 0;
   left: 0;
   right: 0;
+  height: 80px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
   background-color: #fff;
   color: #000;
   z-index: 100;
-
 
   .mat-toolbar-row {
     height: 80px;
